# Control

./: .gitignore  README.md
cpp_implementation/: CMakeLists.txt
cpp_implementation/Pure_Pursuit/: PurePursuit.cpp  PurePursuit.h  main.cpp
cpp_implementation/Rear_Wheel_Feedback/: RearWheelFeedback.cpp  RearWheelFeedback.h  main.cpp
cpp_implementation/Stanley/: Stanley.cpp  Stanley.h  main.cpp
cpp_implementation/utils/: ReferenceLine.cpp  ReferenceLine.h  VehicleModel.cpp  VehicleModel.h
model/横向LQR/: lqr_demo.slx  lqr_demo.slxc  lqr_offline.m  routing_planning.m
model/横纵向联合/: planning_control.slx  planning_control.slxc
model/纵向PID/: brake_calibration.m  generate_calibration.m  pid_demo.slx  pid_demo.slxc  test2.m  thr_calibration.m
modeling_process/: PID纵向控制.md  横向LQR.md  横纵向综合控制.md
note/: 横向控制.md  纵向控制.md  转向相关知识点.md  运动学+动力学模型.md
